force-app/main/default/objects/VTXY_FeatureEntitlement__c/VTXY_FeatureEntitlement__c.object-meta.xml
<CustomObject>
    <description>Returned to Feature_Entitlement_Setting__c</description>
    <label>Feature Entitlement</label>
    <nameField>
        <label>Feature Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>