force-app/main/default/objects/VTXY_FeatureEntitlement__c/fields/FeatureCode__c.field-meta.xml
<CustomField>
    <fullName>FeatureCode__c</fullName>
    <description>Feature key sent to subscriber org.</description>
    <label>Feature Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>