force-app/main/default/objects/VTXY_FeatureEntitlement__c/fields/LimitType__c.field-meta.xml
<CustomField>
    <fullName>LimitType__c</fullName>
    <label>Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>PerUser</fullName>
            </value>
            <value>
                <fullName>PerOrg</fullName>
            </value>
            <value>
                <fullName>PerMonth</fullName>
            </value>
            <value>
                <fullName>Concurrent.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>