force-app/main/default/objects/VTXY_FeatureEntitlement__c/fields/LimitValue__c.field-meta.xml
<CustomField>
    <fullName>LimitValue__c</fullName>
    <description>Limit quantity.</description>
    <label>Limit Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>