force-app/main/default/objects/VTXY_FeatureEntitlement__c/fields/Provider_License_del__c.field-meta.xml
<CustomField>
    <fullName>Provider_License_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>License/account allocation</description>
    <label>Provider License</label>
    <referenceTo>VTXY_ProviderLicense__c</referenceTo>
    <relationshipLabel>Feature Entitlements</relationshipLabel>
    <relationshipName>Feature_Entitlements_del</relationshipName>
    <type>Lookup</type>
</CustomField>