force-app/main/default/objects/VTXY_FeatureEntitlement__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Manual reason or contract reference.</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>